# offline-model-based-rl

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  environment.yml  pyproject.toml  readme.md  setup.cfg  setup.py  tox.ini
.github/workflows/: pipeline.yml
benchmark/: main.py  notes.txt  train.py  user_config.py  vanilla_sac.sh
benchmark/actors/: behavioral_cloning.py  cc.py  cql.py  random_agent.py  sac.py
benchmark/evaluation/: analyze_hyperparams.py  analyze_pessimism_sweep.py  antmaze_medium_model_quality.py  antmaze_umaze_model_quality.py  check_dataset_dynamics.py  check_dataset_statistics.py  check_experiments.py  env_images.py  evaluate_curiosity.py  evaluate_experiments.py  evaluate_finetuning.py  evaluate_metrics.py  evaluate_metrics_finetuning.py  evaluate_model_metrics.py  evaluate_policy.py  finetuning.py  ombrl.py  partitioning_problem.py  pessimism_sweep.py  plot.py  plot_virtual_rollouts_against_ground_truth.py  prob_nn_on_maze2d_dataset.py  prob_nn_on_toy_dataset.py  show_mujoco_model_quality.py  show_mujoco_model_quality_paper.py  train_mujoco_policies.py  visualize_maze_trajectories.py
benchmark/evaluation/ant/: mbpo_probabilistic_ensemble.sh  vanilla_sac.sh
benchmark/evaluation/ant_maze/: mbpo_online_umaze_diverse.sh  sac_online_umaze_diverse.sh
benchmark/evaluation/half_cheetah/: mbpo_deterministic_ensemble.sh  mbpo_deterministic_single.sh  mbpo_offline_medium_expert.sh  mbpo_online.sh  (+10 more)
benchmark/models/: ensemble_dense_layer.py  environment_model.py  mlp.py  mlp_actor_critic.py  mlp_q_function.py  multi_head_mlp.py  q_ensemble.py  squashed_gaussian_mlp_actor.py  train_antmaze_medium_diverse_model.py  train_antmaze_umaze_diverse_model.py
benchmark/sac/: sac.py
benchmark/test/: pytest.ini  test_augmentation.py  test_behavioral_cloning.py  test_environment_model.py  test_environment_model_training.py  test_envs.py  test_loss_functions.py  test_mbpo.py  test_postprocessing.py  test_preprocessing.py  test_pretrain_agent.py  test_random_agent.py  test_replay_buffer.py  test_reward_functions.py  test_rollout_length_from_schedule.py  test_sac.py  test_sac_cpu.py  test_setup_test_env.py  test_termination_functions.py  test_train_environment_model.py  test_trainer.py  test_value_from_schedule.py  test_virtual_rollouts.py  train_antmaze_medium_model.py  train_antmaze_umaze_model.py  watch_fast_tests.sh
benchmark/utils/: actions.py  augmentation.py  check_datasets.py  combined_shape.py  count_vars.py  env_name_from_exp_name.py  envs.py  evaluate_policy.py  load_dataset.py  logx.py  loss_functions.py  mazes.py  mode_from_exp_name.py  model_needs_training.py  modes.py  plot.py  postprocessing.py  preprocessing.py  pretrain_agent.py  print_warning.py  random_agent.py  replay_buffer.py  reward_functions.py  rollout_length_from_schedule.py  run_utils.py  sample_selectors.py  selectors.py  setup_test_env.py  termination_functions.py  test_policy.py  train_antmaze_medium_diverse_model.py  train_antmaze_medium_model.py  train_antmaze_umaze_model.py  train_environment_model.py  uncertainty_distribution.py  virtual_rollouts.py
docs/: conf.py  get_started.rst  index.rst
offline_mbrl/: train.py  user_config.py
offline_mbrl/actors/: behavioral_cloning.py  cc.py  cql.py  sac.py
offline_mbrl/evaluation/: analyze_hyperparams.py  analyze_pessimism_sweep.py  check_dataset_dynamics.py  check_dataset_statistics.py  env_images.py  evaluate_curiosity.py  evaluate_experiments.py  evaluate_finetuning.py  evaluate_metrics.py  evaluate_metrics_finetuning.py  evaluate_model_metrics.py  evaluate_policy.py  finetuning.py  ombrl.py  partitioning_problem.py  pessimism_sweep.py  plot.py  prob_nn_on_toy_dataset.py  show_mujoco_model_quality.py  show_mujoco_model_quality_paper.py  train_mujoco_policies.py
offline_mbrl/models/: ensemble_dense_layer.py  environment_model.py  mlp.py  mlp_q_function.py  multi_head_mlp.py  q_ensemble.py  squashed_gaussian_mlp_actor.py
offline_mbrl/test/: test_augmentation.py  test_behavioral_cloning.py  test_environment_model.py  test_environment_model_training.py  test_envs.py  test_mbpo.py  test_postprocessing.py  test_preprocessing.py  test_pretrain_agent.py  test_random_agent.py  test_replay_buffer.py  test_reward_functions.py  test_sac.py  test_setup_test_env.py  test_trainer.py  test_value_from_schedule.py  test_virtual_rollouts.py  watch_fast_tests.sh
offline_mbrl/utils/: augmentation.py  env_name_from_exp_name.py  envs.py  get_x_y_from_batch.py  load_dataset.py  logx.py  model_needs_training.py  modes.py  mpi_tools.py  postprocessing.py  preprocessing.py  pretrain_agent.py  replay_buffer.py  reward_functions.py  run_utils.py  sample_selectors.py  serialization_utils.py  setup_test_env.py  uncertainty_distribution.py  value_from_schedule.py  virtual_rollouts.py
src/offline_mbrl/: __init__.py  schemas.py  train.py  user_config.py
tests/: test_behavioral_cloning.py  test_env_name_from_exp_name.py  test_environment_model.py  test_environment_model_training.py  test_get_experiment_name.py  test_mbpo.py  test_mode_from_exp_name.py  test_model_needs_training.py  test_postprocessing.py  test_preprocessing.py  test_random_agent.py  test_replay_buffer.py  test_sac.py  test_trainer.py  test_uncertainty_distribution.py  test_user_config.py  test_virtual_rollouts.py
tests/test/: run_medium_tests.sh  test_behavioral_cloning.py  test_environment_model.py  test_environment_model_training.py  test_envs.py  test_postprocessing.py  test_preprocessing.py  test_pretrain_agent.py  test_random_agent.py  test_replay_buffer.py  test_sac.py  test_setup_test_env.py  test_trainer.py  test_value_from_schedule.py  test_virtual_rollouts.py
(+123 files in other folders)
