[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

# Enables the usage of setuptools_scm
[tool.setuptools_scm]


[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line_length = 88

[tool.pytest.ini_options]
addopts = '''
    -v
    --strict-markers
    --tb=native
    --durations 0 
    --durations-min=0.1
    '''
markers = '''
    fast: Fastest tests, a few hundred milliseconds
    medium: Medium tests, finishing roughly less than a minute
    slow: Slowest tests, can take hours
    '''

[tool.pylint.master]
recursive = "yes"
ignore = [
    "conf.py", # The Sphinx config file
    ".tox",
    "build",
    "dist",
    "log"
]
ignore-patterns = ["venv.*"]

[tool.pylint.messages_control]
max-line-length = 88
extension-pkg-whitelist = "mpi4py"
disable = """
    too-few-public-methods,
    too-many-locals,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-statements,
    too-many-branches,
    too-many-function-args,
    too-many-nested-blocks,
    too-many-return-statements,
    missing-function-docstring,
    missing-module-docstring,
    missing-class-docstring,
    duplicate-code,
    invalid-name
    """

[tool.pylint.typecheck]
generated-members = "numpy.*,torch.*"