[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

# Enables the usage of setuptools_scm
[tool.setuptools_scm]


[tool.isort]
profile = "black"
line_length = 88
extend_skip_glob = ["data/*"]

[tool.black]
line_length = 88
extend-exclude = "data/*"

[tool.pytest.ini_options]
addopts = '''
    -vv
    --strict-markers
    --doctest-modules
    --junitxml=reports/pytest.xml
    --cov=offline_mbrl
    --cov-config=pyproject.toml
    --cov-report xml:reports/coverage.xml
    --cov-report html:reports/coverage_html
    --ignore="data/"
    '''
markers = '''
    fast: Fastest tests, a few hundred milliseconds
    medium: Medium tests, finishing roughly less than a minute
    slow: Slowest tests, can take hours
    '''

[tool.coverage.run]
branch = true
data_file = "reports/.coverage"
omit = ["*/evaluation/*"]

[tool.coverage.paths]
# Maps coverage measured in site-packages to source files in src
source = ["src/", ".tox/*/lib/python*/site-packages/"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["venv.*/",  "build/", "dist/", "data/", "evaluation"]

[tool.pylint.master]
recursive = "yes"
ignore = [
    ".tox",
    "build",
    "dist",
    "data",
    "conf.py"
]
ignore-patterns = ["venv.*"]

[tool.pylint.messages_control]
max-line-length = 88
extension-pkg-whitelist = "mpi4py"
disable = """
    too-few-public-methods,
    too-many-locals,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-statements,
    too-many-branches,
    too-many-function-args,
    too-many-nested-blocks,
    too-many-return-statements,
    missing-function-docstring,
    missing-module-docstring,
    missing-class-docstring,
    duplicate-code,
    invalid-name
    """

[tool.pylint.typecheck]
generated-members = "numpy.*,torch.*"

[tool.pydocstyle]
convention = "google"