[metadata]
name = offline-mbrl
author = Felipe Peter
author_email = mr-peipei@web.de
description = A library for offline model-based reinforcement learning.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Mr-Pepe/offline-model-based-rl


[options]
python_requires = >=3.9
packages = find:
package_dir =
    =src
install_requires =
    torch
    numpy
    gym==0.23.1 # d4rl requires <0.25.0 but 0.24.1 is apparently buggy and recommends up- or downgrading
    d4rl @ git+https://github.com/rail-berkeley/d4rl@master#egg=d4rl
    matplotlib
    pandas
    seaborn
    patchelf
    joblib
    tensorboard
    ax-platform
    gpytorch<1.9 # Can be removed after https://github.com/pytorch/botorch/issues/1370
    pydantic

[options.packages.find]
where = src


[options.extras_require]
dev =
    tox
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    isort
    black
    mypy
    pylint
    pytest
    pydocstyle[toml]
    types-setuptools

test =
    pytest
    pytest-cov
    coverage[toml]
    pytest-randomly

doc =
    sphinx
    sphinx_rtd_theme

build =
    build[virtualenv]